--- a/index.html
+++ b/index.html
@@ -147,57 +147,32 @@
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">Current role </span>
-    					<h2>Junior Frontend Engineer at AbiolaSoft</h2>
-    					<span class="position">React | CSS | TypeScript | HTML | JavaScript | C#</span>
-    					<p class="mt-4">• Developed reusable React components, increasing the flexibility and scalability of financial applications.<br>
-• Utilized React Router to enhance navigation and provide dynamic route handling.<br>
-• Conducted performance optimizations, resulting in a 30% improvement in application responsiveness.<br>
+    					<span class="date">2023 - Till Date</span>
+    					<h2>Fullstack Engineer</h2>
+    					<span class="position">AbiolaSoft</span>
+    					<p class="mt-4">Web Development | React | C# | Typescript | JavaScript | HTML | CSS.
  						</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">Tech Skills</span>
-    					<h2>Technologies</h2>
-    					<span class="position">Web Developing and Graphic Designing</span>
+    					<span class="date">2021</span>
+    					<h2>Software Engineering Intern</h2>
+    					<span class="position">AbiolaSoft</span>
     					<p class="mt-4">React, CSS, TypeScript, HTML, JavaScript, C# ASP.Net, Bootstrap, Photoshop, Corel Draw, Pixel Lab.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">Soft</span>
-    					<h2>Experience</h2>
-    					<span class="position"> Deep Tech</span>
-    					<p class="mt-4">
-							• Integrated RESTful APIs and GraphQL endpoints to display real-time financial data. <br>
-							• Implemented Redux for efficient state management and consistent data flow. <br>
-						</p>
     				</div>
     			</div>
 
     			<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-    					<span class="date">Work experience</span>
-    					<h2>Frontend Developer HTML, CSS, JavaScript, React, Typescript.</h2>
+    					<span class="date">2022-2023</span>
+    					<h2>Frontend Engineer.</h2>
 						<div>
-							<span class="position">Abiola Soft | Deep tech</span> 
+							<span class="position">AbiolaSoft</span> 
 						</div>
     					<p class="mt-4">• Collaborated with AbiolaSoft Team to implement responsive Finance and interactive App <br>
 							• Joined in Building an interacting Business Finance website, that all business owners will be using in the
 							world. <br>
 							• Under AbiolaSoft guidance i have been able to Built a Professional Portfolio website, Spa Website, Weather app, JavaScript Quiz app, and much more...</p>
     				</div>
-    				
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">UI/UX</span>
-    					<h2>UI/UX Designer</h2>
-    					<span class="position">AbiolaSoft</span>
-    					<p class="mt-4">• Collaborated with UX/UI designers to implement responsive designs and interactive interfaces.</p>
-    				</div>
-					<div class="resume-wrap ftco-animate">
-    					<span class="date">Design</span>
-    					<h2>Graphic Designing</h2>
-    					<span class="position">Desktop Publishing</span>
-    					<p class="mt-4">Microsoft Word | Microsoft Excel | Power Point | Photoshop | Corel Draw</p>
-    				</div>
-    			</div>
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
