--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <!-- <p>Bamidele David is a talented and driven Junior software developer who is making waves in the world of web development & design.
+		            <p>Bamidele David is a talented and driven Junior software developer who is making waves in the world of web development & design.
 						Bamidele's passion for coding was ignited by his mentor, Abiola Olakunle, a kind and knowledgeable individual who introduced him to the world of technology.
 						Under Abiola's guidance, Bamidele has thrived, expanding his knowledge and pushing the boundaries of his skills. He is immensely grateful for Abiola's mentorship, 
 						which has been instrumental in his growth as a developer. With a vision to become a prominent professional software developer in the world, Bamidele is driven to excel. 
@@ -112,7 +112,7 @@
 						always seeking new opportunities to challenge himself and expand his skill set. With his unwavering dedication, exceptional talent, 
 						and the mentorship of Abiola Olakunle, Bamidele is well on his way to achieving his dreams. The future holds great promise for this aspiring software developer as he continues to build and innovate, 
 						leaving an indelible mark on the world of technology.
-					</p> -->
+					</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Bamidele David</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Lagos, Nigeria</span></li>
@@ -123,11 +123,11 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
+              	<!-- <p class="mb-4">
 	                <span class="number" data-number="120">0</span>
 	                <span>Project complete</span>
-                </p>
-                <p><a href="contact-section" class="btn btn-primary py-3 px-3">Contact me</a></p>
+                </p> -->
+                <p><a href="#contact-section" class="btn btn-primary py-3 px-3">Contact me</a></p>
               </div>
 	          </div>
 	        </div>
@@ -150,14 +150,14 @@
     					<span class="date">2023 - Till Date</span>
     					<h2>Fullstack Engineer</h2>
     					<span class="position">AbiolaSoft</span>
-    					<p class="mt-4">Web Development | React | C# | Typescript | JavaScript | HTML | CSS.
+    					<p class="mt-4">Web Development | React | C# | Typescript | JavaScript | Bootstrap | HTML | CSS.
  						</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2021</span>
     					<h2>Software Engineering Intern</h2>
     					<span class="position">AbiolaSoft</span>
-    					<p class="mt-4">React, CSS, TypeScript, HTML, JavaScript, C# ASP.Net, Bootstrap, Photoshop, Corel Draw, Pixel Lab.</p>
+    					<p class="mt-4">Web Desigh and Developing.</p>
     				</div>
     			</div>
 
@@ -168,15 +168,19 @@
 						<div>
 							<span class="position">AbiolaSoft</span> 
 						</div>
-    					<p class="mt-4">• Collaborated with AbiolaSoft Team to implement responsive Finance and interactive App <br>
-							• Joined in Building an interacting Business Finance website, that all business owners will be using in the
-							world. <br>
-							• Under AbiolaSoft guidance i have been able to Built a Professional Portfolio website, Spa Website, Weather app, JavaScript Quiz app, and much more...</p>
+    					<p class="mt-4">
+							• Developed reusable React components, increasing the flexibility and scalability of financial applications. <br>
+							• Implemented Redux for efficient state management and consistent data flow. <br>
+							• Utilized React Router to enhance navigation and provide dynamic route handling. <br>
+							• Integrated RESTful APIs and GraphQL endpoints to display real-time financial data. <br>
+							• Conducted performance optimizations, resulting in a 30% improvement in application responsiveness. <br>
+							• Collaborated with UX/UI designers to implement responsive designs and interactive interfaces.
+							</p>
     				</div>
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="file:///C:/Users/Owner/Downloads/BamideleDavidSmart-Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -290,6 +294,16 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
+							<h3>C#</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
 							<h3>TypeScript</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
@@ -308,16 +322,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>C#</h3>
-							<div class="progress">
-							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
-							  	</div>
-							</div>
-						</div>
-					</div>
+					
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
 							<h3>Bootstrap</h3>
@@ -551,7 +556,7 @@
       </div>
     </section> -->
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
+    <!-- <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container">
 				<div class="row d-md-flex align-items-center">
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
@@ -588,9 +593,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
+    <!-- <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
@@ -600,7 +605,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
