--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p>Fullstack Engineer, Frontend Engineer & Software Engineering Intern.</p>
           </div>
         </div>
     		<div class="row">
@@ -268,7 +268,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Programming Languages | Graphic Design</p>
           </div>
         </div>
 				<div class="row">
@@ -423,32 +423,34 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <h2 class="mb-4">My Projects</h2>
+            <p>Each project in my portfolio is a testament to a collaborative process, advanced technical skills, 
+				and a deep commitment to delivering value and excellence. 
+				<!-- Below are highlights from a selection of projects 
+				that showcase my capabilities across various industries and technologies. --> </p>
           </div>
         </div>
     		<div class="row">
-    			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+				<div class="col-md-8">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/abiolasoft-finance-app-img-prv.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">To-do List App</a></h3>
-	    					<span>To-do List</span>
-	    				</div>
-    				</div>
-  				</div>
-  				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">AbiolaSoft Finance web App</a></h3>
+	    					<h3><a href="https://thefincore.com/">AbiolaSoft Finance web App</a></h3>
 	    					<span>Business Finance App</span>
 	    				</div>
     				</div>
   				</div>
-
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-weather-app-img-prv.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="https://davidgraphix.github.io/Weather-Apps/">Weather App</a></h3>
+	    					<span>Weather</span>
+	    				</div>
+    				</div>
+  				</div>
     			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-quizapp-img-prv.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://davidgraphix.github.io/smart-quiz-app/">JavaScript Quiz App</a></h3>
@@ -456,31 +458,31 @@
 	    				</div>
     				</div>
 
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-webpage-design-img-prv.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://davidgraphix.github.io/Weather-Apps/">Weather App</a></h3>
-	    					<span>Weather</span>
+							<h3><a href="https://davidgraphix.github.io/webpage-Design/">Webpage Design</a></h3>
+			    					<span>Web Design</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-4">
     				<div class="row">
     					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-todo-list-prv-img.png);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="https://davidgraphix.github.io/david-smart-calculator-website/">Web Calculator</a></h3>
-			    					<span>Calculator</span>
+									<h3><a href="https://davidgraphix.github.io/Smart-todo-list-app/">To-do List App</a></h3>
+			    					<span>To-do List</span>
 			    				</div>
 		    				</div>
 	    				</div>
 	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-calculator-img-prv.png);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="https://davidgraphix.github.io/webpage-Design/">Webpage Design</a></h3>
-			    					<span>Web Design</span>
+			    					<h3><a href="https://davidgraphix.github.io/david-smart-calculator-website/">Web Calculator</a></h3>
+	    					<span>Calculator</span>
 			    				</div>
 		    				</div>
 	    				</div>
@@ -613,7 +615,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>You wanna reach me? Feel free to reach out to discuss with me. or just say HELLO!.</p>
           </div>
         </div>
 
@@ -648,7 +650,7 @@
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-globe"></span>
+          			<span class="icon-work"></span>
           		</div>
           		<h3 class="mb-4">Resume</h3>
 	            <p><a href="#resume-section">My Resume</a></p>
@@ -692,7 +694,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>I'm a software developer who is making waves in the world of web development & design. </p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-github"></span></a></li>
@@ -716,11 +718,11 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>API Development</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Database Management</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Performance Optimization</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>DevOps and Support</a></li>
               </ul>
             </div>
           </div>
@@ -741,7 +743,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> David Smart Soft</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> David Smart Soft.</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
