--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
               <p>I'm a software developer who is making waves in the world of web development & design. </p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-github"></span></a></li>
+                <li class="ftco-animate"><a href="https://github.com/davidgraphix/"><span class="icon-github"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
